[tool.poetry]
name = "l33t-score-bot"
version = "0.1.0"
description = ""
authors = ["Soeren Wegener <wegener92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-telegram-bot = {extras = ["job-queue"], version = "^20.8"}
pytz = "^2023.3.post1"
redis = "^5.0.1"
openai = "^1.10.0"
pytest = "^8.0.0"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
